Reuse compile_klang functionality in run_asm_integr_tests.sh. - This actually fixes this script, which wouldn't run because it still     used the old command line interface - Also the compiler is not not compiled any more beforehand to speed up     the process